--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -2,3 +2,7 @@
 /_02_introduction_to_polymorphism/
 /_03_polymorphs/
 /_04_hospital/
+/Cake.class
+/orderCake.class
+/readyMadeCake.class
+/Runner.class
